@@ -1,5 +1,5 @@
 ############################################################################
-# configs/sim/Make.defs
+# configs/sim/pashello/Make.defs
 #
 #   Copyright (C) 2007, 2008 Gregory Nutt. All rights reserved.
 #   Author: Gregory Nutt <spudmonkey@racsa.co.cr>
@@ -67,6 +67,7 @@ EXEEXT			=
 ifeq ("${CONFIG_DEBUG}","y")
   LDFLAGS		+= -g
 endif
+EXTRA_LIBS		= -lm
 
 define COMPILE
 	@echo "CC: $1"
